# smart-contract-experiment

./: .gitignore  Cargo.toml  README.md
crates/: build.sh
crates/glue/: Cargo.toml
crates/glue/src/: lib.rs
crates/sm-address/: Cargo.toml  build.sh  tags
crates/sm-address/src/: lib.rs
crates/sm-alloc/: Cargo.toml  build.sh
crates/sm-alloc/src/: lib.rs  no_std.rs  with_std.rs
crates/sm-transfer/: Cargo.toml  build.sh
crates/sm-transfer/src/: lib.rs
crates/wasm-modules/: sm_address.wasm  sm_address.wast  sm_alloc.wasm  sm_alloc.wast
crates/wasm-utils/: Cargo.toml
crates/wasm-utils/src/: lib.rs  sections_rename.rs
crates/wasm-utils/tests/: export_two_funcs.wasm  export_two_funcs.wast  sections_rename.rs
go/: go.mod  go.sum  main  main.go  smart-contract-experiment
go/address/: address.go
go/state/: account_state.go  global_state.go
sm-wasm-modules/: sm_address.wast  sm_transfer.wast
src/: Cargo.toml  address.rs  contract_executor.rs  global_state.rs  lib.rs  manual_contract.rs  request.rs  transfer_contract.rs
