[package]
name = "sm-alloc"
version = "0.0.10"
authors = ["Yaron Wittenstein <yaron.wittenstein@gmail.com>"]
edition = "2018"

[lib]
path = "src/lib.rs"
crate-type = ["staticlib"]

[profile.release]
panic = "abort"
opt-level = "z"
debug = false

[dependencies]
cfg-if = "0.1.7"
wee_alloc = { version = "0.4.4", default-features = true }
